[project]
name = "fast-common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://artsz.zte.com.cn/artifactory/api/pypi/public-pypi-virtual/simple"
default = true
